@@ -13,16 +13,16 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 import uk.gov.companieshouse.api.model.payment.Cost;
 import uk.gov.companieshouse.api.model.transaction.Transaction;
+import uk.gov.companieshouse.exception.BadRequestException;
 import uk.gov.companieshouse.exception.DissolutionNotFoundException;
+import uk.gov.companieshouse.exception.DissolutionNotLinkedToTransactionException;
 import uk.gov.companieshouse.exception.NotFoundException;
 import uk.gov.companieshouse.logging.Logger;
 import uk.gov.companieshouse.service.cost.CostService;
 
-import java.util.Collections;
 import java.util.List;
 
-import static uk.gov.companieshouse.model.Constants.ERIC_REQUEST_ID_KEY;
-
+import static uk.gov.companieshouse.model.Constants.*;
 
 @RestController
 @RequestMapping("/transactions/{transaction_id}/dissolution/{dissolution_id}/costs")
@@ -38,21 +38,23 @@ public class CostController {
     @Operation(summary = "Get Dissolution Costs", tags = "Dissolution")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Costs found"),
-            @ApiResponse(responseCode = "404", description = "Dissolution Application not found")
+            @ApiResponse(responseCode = "400", description = "Dissolution not linked to transaction"),
+            @ApiResponse(responseCode = "404", description = "Dissolution not found")
     })
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     public List<Cost> getCosts(
-            @RequestAttribute("transaction") Transaction transaction,
-            @PathVariable("transaction_id") String transactionId,
-            @PathVariable("dissolution_id") String dissolutionId,
-            @RequestHeader(value = ERIC_REQUEST_ID_KEY) String requestId) {
+            @RequestAttribute(TRANSACTION_KEY) Transaction transaction,
+            @PathVariable(TRANSACTION_ID_KEY) String transactionId,
+            @PathVariable(DISSOLUTION_ID_KEY) String dissolutionId,
+            @RequestHeader(HEADER_ERIC_REQUEST_ID) String requestId) {
         logger.info("Getting costs for transaction: " + transactionId + ", dissolution: " + dissolutionId + ", requestId: " + requestId);
         try {
-            var cost = costService.getCosts(dissolutionId);
-            return Collections.singletonList(cost);
+            return List.of(costService.getCosts(transaction, dissolutionId));
         } catch (DissolutionNotFoundException e) {
             throw new NotFoundException();
+        } catch (DissolutionNotLinkedToTransactionException e) {
+            throw new BadRequestException(e.getMessage());
         }
     }
 }
